RESOLVED FIXED32394
[CHROMIUM] Assert with SVG filters enabled
https://bugs.webkit.org/show_bug.cgi?id=32394
Summary [CHROMIUM] Assert with SVG filters enabled
Stephen White
Reported 2009-12-10 14:26:43 PST
The following layout tests assert on Chrome/Linux with SVG filters enabled: LayoutTests/svg/W3C-SVG-1.1/filters-tile-01-b.svg LayoutTests/svg/batik/filters/filterRegions.svg LayoutTests/svg/filters/subRegion-in-userSpace.svg
Attachments
Fix for assert (1.34 KB, patch)
2009-12-10 14:29 PST, Stephen White
no flags
Stephen White
Comment 1 2009-12-10 14:29:36 PST
Created attachment 44639 [details] Fix for assert
WebKit Review Bot
Comment 2 2009-12-10 14:33:15 PST
style-queue ran check-webkit-style on attachment 44639 [details] without any errors.
Dimitri Glazkov (Google)
Comment 3 2009-12-10 14:56:51 PST
Comment on attachment 44639 [details] Fix for assert okayz.
WebKit Commit Bot
Comment 4 2009-12-10 15:40:36 PST
Comment on attachment 44639 [details] Fix for assert Clearing flags on attachment: 44639 Committed r51968: <http://trac.webkit.org/changeset/51968>
WebKit Commit Bot
Comment 5 2009-12-10 15:40:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.