2009-12-10  Stephen White  <senorblanco@chromium.org>

Reviewed by Dimitri Glazkov.

        Fix for assert on Chrome/skia with SVG Filters enabled.
        https://bugs.webkit.org/show_bug.cgi?id=32394

        Covered by LayoutTests/svg/W3C-SVG-1.1/filters-tile-01-b.svg and others.

        * platform/graphics/skia/ImageBufferSkia.cpp:
        (WebCore::ImageBuffer::platformTransformColorSpace):

Canonical link: https://commits.webkit.org/43393@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51968 268f45cc-cd09-0410-ab3c-d52691b4dbfc